chore(style): pre wrap style fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,10 @@
     align-self: stretch;
     overflow: auto;
     font-size: 12px;
+
+    pre {
+      white-space: break-spaces;
+    }
   }
 
 }
